Warning about using API Keys directly in the clients

--- a/docs/wearables/sdks/android.mdx
+++ b/docs/wearables/sdks/android.mdx
@@ -103,6 +103,16 @@ Here is an example of a `AndroidManifest.xml` file that uses Vital Devices:
 
 ### 1. VitalClient
 
+<Warning>
+
+We strongly advise using the Vital Sign-In token approach described [here](/wearables/sdks/authentication#vital-sign-in-token).
+
+API Key is discouraged for production mobile apps, since it would be distributed as cleartext. API Key support is intended only for customer early evaluation in Sandbox.
+
+Use Vital Sign-In Token whenever possible.
+
+</Warning>
+
 First you need to get an instance of `VitalClient`:
 
 ```kotlin
