--- a/docs/lab/walk-in/communications.mdx
+++ b/docs/lab/walk-in/communications.mdx
@@ -21,10 +21,10 @@ A table of the **Order Status** and **default SMS** is provided bellow:
 
 | Order Status | Default Message |
 | --- | --- |
-| `ordered` | _"Hi, {patient_first_name}, your order for the {team_name} walk-in-test has been placed! We'll provide you with updates on the status of your order via text messages :)."_ |
-| `requisition_created` | _"Hey {patient_first_name}, it's time to visit your local {lab_name} center. Please check the email you just received for instructions."_ |
+| `ordered` | _"Hi, `{patient_first_name}`, your order for the `{team_name}` walk-in-test has been placed! We'll provide you with updates on the status of your order via text messages :)."_ |
+| `requisition_created` | _"Hey `{patient_first_name}`, it's time to visit your local `{lab_name}` center. Please check the email you just received for instructions."_ |
 | `completed` | _"Your results have finished processing, your results should be ready soon."_ |
-| `cancelled` | _"Hey, your order for the {team_name} walk-in-test has been cancelled. If this is by accident please contact support."_ |
+| `cancelled` | _"Hey, your order for the `{team_name}` walk-in-test has been cancelled. If this is by accident please contact support."_ |
 
 <Info>SMS Texts are customizable, and can be enabled or disabled individually.</Info>
 
