--- a/docs/lab/at-home-phlebotomy/order-appointment-lifecycle.mdx
+++ b/docs/lab/at-home-phlebotomy/order-appointment-lifecycle.mdx
@@ -17,6 +17,7 @@ possible low-level status are:
 
 - `ordered`: Vital received the order, stored it into our system, and started processing it asynchronously.
 - `requisition_created`: An order requisition form was validated and created with the partner laboratory, making the order available to be carried out.
+- `appointment_pending`: An appointment was placed in Vital's system for the order, but doesn't have a scheduled date.
 - `appointment_scheduled`: An appointment was scheduled or rescheduled for the order.
 - `draw_completed`: The phlebotomy appointment was completed and the blood was drawn successfuly.
 - `appointment_cancelled`: The appointment was cancelled, by either the patient, Vital or you.
@@ -40,6 +41,7 @@ in the following diagram.
 The appointment lifecycle is separate from the order lifecyle, and it corresponds to a single appointment.
 The possible status are defined as follows:
 
+- `pending`: An appointment was placed in the system, and is pending updates from the phlebotomy service.
 - `scheduled`: An appointment was scheduled or rescheduled.
 - `in-progress`: The phlebotomist is in their way to the patient address.
 - `cancelled`: The appointment was cancelled by either the patient, Vital or you.
