--- a/docs/event-catalog/labtest.order.updated.mdx
+++ b/docs/event-catalog/labtest.order.updated.mdx
@@ -82,7 +82,7 @@ Deprecated. Use status instead.
 </Expandable>
 </ResponseField>
 <ResponseField name="fasting" type="boolean | null">
-Defines whether a lab test requires fasting. Only available for Labcorp.
+Defines whether a lab test requires fasting.
 </ResponseField>
 <ResponseField name="lab" type="ClientFacingLab | null">
 <Expandable title="ClientFacingLab" defaultOpen="true">
@@ -260,7 +260,7 @@ Vital ID of the health insurance.
 DEPRECATED. Requistion form url.
 </ResponseField>
 <ResponseField name="priority" type="boolean | null">
-Defines whether order is priority or not. Only available for Labcorp. For Labcorp, this corresponds to a STAT order.
+Defines whether order is priority or not. For some labs, this refers to a STAT order.
 </ResponseField>
 <ResponseField name="shipping_details" type="ShippingAddress | null">
 Shipping Details. For unregistered testkit orders.
@@ -291,9 +291,9 @@ Shipping Details. For unregistered testkit orders.
 {
   "event_type": "labtest.order.updated",
   "data": {
-    "id": "995f2241-f37e-463b-a3e1-5e46e01052ac",
-    "team_id": "020bc8c2-615f-47bd-8934-f5c765376bea",
-    "user_id": "d45cb59b-c36c-4b7d-946d-c2db84eaac8c",
+    "id": "0dc9fef7-77b3-4ea0-97af-f1175113e7eb",
+    "team_id": "577ff7c5-d8fd-429f-9180-8fbdb11ad30b",
+    "user_id": "02093bc0-c0bd-4583-8ba6-0e186edaf964",
     "patient_details": {
       "dob": "2020-01-01",
       "gender": "male"
@@ -334,7 +334,7 @@ Shipping Details. For unregistered testkit orders.
       "method": "testkit"
     },
     "sample_id": "123456789",
-    "health_insurace_id": "4237d1a4-429a-4bee-9fed-649712cd709b",
+    "health_insurace_id": "98e941df-615a-4626-a032-43b96fec659d",
     "requisition_form_url": "https://www.example.com",
     "notes": "This is a note",
     "created_at": "2020-01-01T00:00:00Z",
